@@ -110,7 +110,7 @@ eskuineko botoiarekin barraren gainean sakatuz, bertako zenbait botoi
 
 erakutsi edo ezkutatzeko aukera dago.</li> </ul>
 
-<h2>Laster-teklak</h2>Euskalbarrek hainbat laster-tekla eskaintzen ditu eguneroko lana errazteko:<br /><ul><li>Ktrl+Alt+A: Euskalbar erakusten/ezkutatzen du</li><li>Ktrl+Alt+S: Testu-kutxa&nbsp;fokatzen du eta testuren bat badauka, hautatu egiten du</li><li>Ktrl+Alt+Z: Hizkuntza hautatzeko botoiaren zentzua aldatzen du</li><li>Ktrl+Alt+H: Hiztegien menua erakusten/ezkutatzen du</li><li>Ktrl+Alt+T: Testuinguru-menua erakusten/ezkutatzen du</li></ul><h2>Hiztegien
+<h2>Laster-teklak</h2>Euskalbarrek hainbat laster-tekla eskaintzen ditu eguneroko lana errazteko:<br /><ul><li>Ktrl+Alt+A: Euskalbar erakusten/ezkutatzen du</li><li>Ktrl+Alt+S: Testu-koadroa&nbsp;fokatzen du eta testuren bat badauka, hautatu egiten du</li><li>Ktrl+Alt+Z: Hizkuntza hautatzeko botoiaren zentzua aldatzen du</li><li>Ktrl+Alt+H: Hiztegien menua erakusten/ezkutatzen du</li><li>Ktrl+Alt+T: Testuinguru-menua erakusten/ezkutatzen du</li></ul><h2>Hiztegien
 
 menua</h2>
 
