@@ -1,4 +1,5 @@
 hizk=english
+kutxahutsa=Please, enter a text in the Euskalbar textbox.
 izenbcss=Select skin
 hedapcss=CSS File
 m0Euskalterm=Loading Euskalterm...
