@@ -1,4 +1,5 @@
 hizk=español
+kutxahutsa=Por favor, introduce un texto en la caja de texto de Euskalbar.
 izenbcss=Selección de skin
 hedapcss=Fichero CSS
 m0Euskalterm=Cargando Euskalterm...
