@@ -1,4 +1,5 @@
 hizk=euskara
+kutxahutsa=Mesedez, sartu testu bat Euskalbarren testu-koadroan.
 izenbcss=Hautatu azala
 hedapcss=CSS fitxategia
 m0Euskalterm=Euskalterm kargatzen...
